Change theme from readthedocs to material

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: FRICOSIPY
 theme:
-  name: readthedocs
+  name: material
   highlightjs: true
   logo: images/FRICOSIPY_logo.png
 plugins:
