--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: FRICOSIPY
 theme:
-  name: material
+  name: readthedocs
   highlightjs: true
   logo: images/FRICOSIPY_logo.png
 plugins:
