Add custom directory for theme overrides

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: FRICOSIPY
 theme:
   name: readthedocs
+  custom_dir: overrides
   highlightjs: true
   logo: images/FRICOSIPY_logo.png
 plugins:
