Update custom_dir path in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ theme:
   name: readthedocs
   highlightjs: true
   logo: images/FRICOSIPY_logo.png
-  custom_dir: docs/overrides
+  custom_dir: overrides
 plugins:
   - search
   - mkdocstrings:
