--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,3 +15,7 @@ markdown_extensions:
   - markdown_include.include:
       base_path: .
   - admonition
+
+nav:
+  - Home: index.md
+  - Installation: installation.md
