--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,3 +37,6 @@ nav:
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js
+
+extra_css:
+  - css/custom.css
