--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ markdown_extensions:
       generic: true
   - pymdownx.details
   - pymdownx.superfences
+  - attr_list
 
 nav:
   - Home: index.md
