--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -31,7 +31,7 @@ markupsafe==2.1.1
     #   mkdocstrings
 mergedeep==1.3.4
     # via mkdocs
-mkdocs==1.3.0
+mkdocs==1.8.0
     # via
     #   -r docs/requirements.in
     #   mkdocs-autorefs
@@ -44,6 +44,7 @@ mkdocstrings[python]==0.19.0
     #   mkdocstrings-python
 mkdocstrings-python==0.7.1
     # via mkdocstrings
+mkdocs-material>=10.0
 packaging==21.3
     # via mkdocs
 pymdown-extensions==9.5
