--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 # MkDocs and Material
-mkdocs>=1.8.4
-mkdocs-material>=10.1.1
+mkdocs==1.6.1
+mkdocs-material==9.1.12
 
 # Plugins
 mkdocstrings[python]==0.19.0
@@ -9,20 +9,20 @@ mkdocs-autorefs==0.4.1
 markdown-include==0.6.0
 
 # Dependencies (pinned to compatible versions)
-click>=8.1.3
-ghp-import>=2.1.0
-griffe>=0.22.0
-importlib-metadata>=6.8.0
-jinja2>=3.1.2
-markdown>=3.3.7
-markupsafe>=2.1.1
-mergedeep>=1.3.4
-pymdown-extensions>=9.5
-packaging>=21.3
-pyparsing>=3.0.9
-python-dateutil>=2.8.2
-pyyaml>=6.0
-pyyaml-env-tag>=0.1
-six>=1.16.0
-watchdog>=2.2.0
-zipp>=3.15.0
+click==8.1.3
+ghp-import==2.1.0
+griffe==0.22.0
+importlib-metadata==6.8.0
+jinja2==3.1.2
+markdown==3.3.7
+markupsafe==2.1.1
+mergedeep==1.3.4
+pymdown-extensions==9.5
+packaging==21.3
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pyyaml==6.0
+pyyaml-env-tag==0.1
+six==1.16.0
+watchdog==2.2.0
+zipp==3.15.0
