--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,7 +8,7 @@ mkdocstrings-python==0.7.1
 mkdocs-autorefs==0.4.1
 markdown-include==0.6.0
 
-# Dependencies (pinned to compatible versions)
+# Dependencies
 click==8.1.3
 ghp-import==2.1.0
 griffe==0.22.0
@@ -17,7 +17,7 @@ jinja2==3.1.2
 markdown==3.3.7
 markupsafe==2.1.1
 mergedeep==1.3.4
-pymdown-extensions==9.5
+pymdown-extensions>=9.9.1,<10
 packaging==21.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
