--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,22 +1,20 @@
 site_name: FRICOSIPY
+
 theme:
   name: material
   logo: images/FRICOSIPY_Logo.png
-  favicon: images/FRICOSIPY_Logo.png
   palette:
-    primary: 'indigo'
-    accent: 'indigo'
+    primary: "#f7f7f7"   # Light gray header like RTD
+    accent: indigo
   font:
-    text: 'Roboto'       # similar to Read the Docs default
-    code: 'Roboto Mono'  # similar to Read the Docs
+    text: Roboto
+    code: Roboto Mono
   features:
-    - navigation.expand        # expand navigation like RTD
-    - navigation.tabs          # or remove if you want side nav
-    - content.code.copy        # optional, copy code button
-    - toc.integrate            # table of contents integrated
-extra_css:
-  - assets/css/custom.css      # optional: fine-tune spacing/colors
-
+    - navigation.expand
+    - navigation.sections
+    - toc.integrate
+    - content.code.copy
+    
 plugins:
   - search
   - mkdocstrings:
@@ -24,6 +22,8 @@ plugins:
         python:
           options:
             docstring_style: sphinx
+  - mkdocs-autorefs
+  - markdown-include
 
 markdown_extensions:
   - markdown_include.include:
