--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ theme:
   name: readthedocs
   highlightjs: true
   logo: images/FRICOSIPY_Logo.png
-  custom_dir: overrides
+  custom_dir: docs/overrides
 
 plugins:
   - search
