--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,6 +7,7 @@ mkdocstrings[python]==0.19.0
 mkdocstrings-python==0.7.1
 mkdocs-autorefs==0.4.1
 markdown-include==0.6.0
+mkdocs-meta-descriptions-plugin==0.1.1
 
 # Dependencies
 click==8.1.3
