--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: FRICOSIPY
-site_url: https://fricosipy.readthedocs.io/
+site_url: https://fricosipy.readthedocs.io/en/latest/
 site_author: Marcus Alexander Gastaldello
 site_description: "The University of Fribourg Variant of the Coupled Snow & Ice Model in Python"
 
