--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ site_description: "The University of Fribourg Variant of the Coupled Snow & Ice 
 theme:
   name: readthedocs
   highlightjs: true
-  logo: images/FRICOSIPY_Logo.png
+  logo: images/FRICOSIPY_logo.png
   custom_dir: docs/custom_theme
 
 extra:
