--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,11 +6,11 @@ site_description: "The University of Fribourg Variant of the Coupled Snow & Ice 
 theme:
   name: readthedocs
   highlightjs: true
-  logo: images/FRICOSIPY-logo-transparent.png
+  logo: images/FRICOSIPY-logo-blue.png
   custom_dir: docs/custom_theme
 
 extra:
-  favicon: img/favicon.ico
+  favicon: img/favicon_v2.ico
   
 plugins:
   - search
