--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,7 @@ markdown_extensions:
   - pymdownx.superfences
   - attr_list
   - pymdownx.highlight:
-      pygments_style: monokai
+      pygments_style: dark-plus
 
 nav:
   - Home: index.md
