--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,11 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: math
+          class: arithmatex
+          format: !!python/name:pymdownx.arithmatex.fence_math
   - attr_list
   - md_in_html
 
