--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,8 @@ nav:
     - Result Viewer: result_viewer.md
   - "Advanced":
     - Model Architecture: model_architecture.md
+  - "Support"
+    - Contact: contact.md
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-mml-chtml.js
