--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ nav:
     - Introduction: introduction.md
     - Surface Energy Balance: surface_energy_balance.md
     - Multi-layer Subsurface Model: subsurface_model.md
-    - Differences to the Original COSIPY Model: differences.md
+    - Differences to the COSIPY Model: differences.md
   - "Walkthrough":
     - Installation: installation.md
     - Model Input Files: model_input_files.md
